--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@vitejs/plugin-react": "^4.2.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.6.4",
+        "daisyui": "^4.12.10",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
         "react": "^18.2.0",
@@ -21,7 +22,14 @@
     },
     "dependencies": {
         "@arismun/format-rupiah": "^3.0.0",
-        "@heroicons/react": "^2.1.5",
-        "@material-tailwind/react": "^2.1.9"
+        "@heroicons/react": "^1.0.6",
+        "@material-tailwind/react": "^2.1.9",
+        "file-saver": "^2.0.5",
+        "perfect-scrollbar": "^1.5.5",
+        "react-icons": "^5.3.0",
+        "react-toastify": "^10.0.5",
+        "react-transition-group": "^4.4.5",
+        "sheetjs-style": "^0.15.8",
+        "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
     }
 }
